// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#file-diff-generator should collate resultant file paths into a single file: ..\\output\\filesList.html 1`] = `
"<html>
<head>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"https://cdn.jsdelivr.net/npm/diff2html/bundles/css/diff2html.min.css\\" /> 
    <script type=\\"text/javascript\\" src=\\"https://cdn.jsdelivr.net/npm/diff2html/bundles/js/diff2html.min.js\\"></script>
    <style>
        .d2h-files-diff {
            height: auto !important;
        }
    </style>
</head>
<body>
    <div id=\\"body\\">    <div id=\\"fileList\\">
        <h1>Files Changed (6)</h1>
        <ol>
            
                <li><a href=\\"abacavir.html\\">abacavir.html</a></li>
            
                <li><a href=\\"allResults.html\\">allResults.html</a></li>
            
                <li><a href=\\"belatacept.html\\">belatacept.html</a></li>
            
                <li><a href=\\"bnf.html\\">bnf.html</a></li>
            
                <li><a href=\\"calcitriol.html\\">calcitriol.html</a></li>
            
                <li><a href=\\"selenium.html\\">selenium.html</a></li>
            
                <li><a href=\\"sub-folder/paracetamol.html\\">sub-folder/paracetamol.html</a></li>
            
        </ol>
    </div>
    </div>
</body>
</html>"
`;

exports[`#file-diff-generator should compare files from two paths and create a diff for each file processed: ..\\output\\abacavir.html 1`] = `
"<html>
<head>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"https://cdn.jsdelivr.net/npm/diff2html/bundles/css/diff2html.min.css\\" /> 
    <script type=\\"text/javascript\\" src=\\"https://cdn.jsdelivr.net/npm/diff2html/bundles/js/diff2html.min.js\\"></script>
    <style>
        .d2h-files-diff {
            height: auto !important;
        }
    </style>
</head>
<body>
    <div id=\\"body\\">
    <div class=\\"d2h-file-list-wrapper\\">
    <div class=\\"d2h-file-list-header\\">
        <span class=\\"d2h-file-list-title\\">Files changed (1)</span>
        <a class=\\"d2h-file-switch d2h-hide\\">hide</a>
        <a class=\\"d2h-file-switch d2h-show\\">show</a>
    </div>
    <ol class=\\"d2h-file-list\\">
    <li class=\\"d2h-file-list-line\\">
    <span class=\\"d2h-file-name-wrapper\\">
      <svg aria-hidden=\\"true\\" class=\\"d2h-icon d2h-changed\\" height=\\"16\\" title=\\"modified\\" version=\\"1.1\\"
           viewBox=\\"0 0 14 16\\" width=\\"14\\">
          <path d=\\"M13 1H1C0.45 1 0 1.45 0 2v12c0 0.55 0.45 1 1 1h12c0.55 0 1-0.45 1-1V2c0-0.55-0.45-1-1-1z m0 13H1V2h12v12zM4 8c0-1.66 1.34-3 3-3s3 1.34 3 3-1.34 3-3 3-3-1.34-3-3z\\"></path>
      </svg>      <a href=\\"#d2h-547348\\" class=\\"d2h-file-name\\">test/new/abacavir.html</a>
      <span class=\\"d2h-file-stats\\">
          <span class=\\"d2h-lines-added\\">+1</span>
          <span class=\\"d2h-lines-deleted\\">-1</span>
      </span>
    </span>
</li>
    </ol>
</div><div class=\\"d2h-wrapper\\">
    <div id=\\"d2h-547348\\" class=\\"d2h-file-wrapper\\" data-lang=\\"html\\">
    <div class=\\"d2h-file-header\\">
    <span class=\\"d2h-file-name-wrapper\\">
    <svg aria-hidden=\\"true\\" class=\\"d2h-icon\\" height=\\"16\\" version=\\"1.1\\" viewBox=\\"0 0 12 16\\" width=\\"12\\">
        <path d=\\"M6 5H2v-1h4v1zM2 8h7v-1H2v1z m0 2h7v-1H2v1z m0 2h7v-1H2v1z m10-7.5v9.5c0 0.55-0.45 1-1 1H1c-0.55 0-1-0.45-1-1V2c0-0.55 0.45-1 1-1h7.5l3.5 3.5z m-1 0.5L8 2H1v12h10V5z\\"></path>
    </svg>    <span class=\\"d2h-file-name\\">test/new/abacavir.html</span>
    <span class=\\"d2h-tag d2h-changed d2h-changed-tag\\">CHANGED</span></span>
    </div>
    <div class=\\"d2h-file-diff\\">
        <div class=\\"d2h-code-wrapper\\">
            <table class=\\"d2h-diff-table\\">
                <tbody class=\\"d2h-diff-tbody\\">
                <tr>
    <td class=\\"d2h-code-linenumber d2h-info\\"></td>
    <td class=\\"d2h-info\\">
        <div class=\\"d2h-code-line d2h-info\\">@@ -1,1 +1,1 @@</div>
    </td>
</tr><tr>
    <td class=\\"d2h-code-linenumber d2h-del d2h-change\\">
      <div class=\\"line-num1\\">1</div>
<div class=\\"line-num2\\"></div>
    </td>
    <td class=\\"d2h-del d2h-change\\">
        <div class=\\"d2h-code-line d2h-del d2h-change\\">
            <span class=\\"d2h-code-line-prefix\\">-</span>
            <span class=\\"d2h-code-line-ctn\\">Abacavir <del>10mg</del> Dose</span>
        </div>
    </td>
</tr><tr>
    <td class=\\"d2h-code-linenumber d2h-ins d2h-change\\">
      <div class=\\"line-num1\\"></div>
<div class=\\"line-num2\\">1</div>
    </td>
    <td class=\\"d2h-ins d2h-change\\">
        <div class=\\"d2h-code-line d2h-ins d2h-change\\">
            <span class=\\"d2h-code-line-prefix\\">+</span>
            <span class=\\"d2h-code-line-ctn\\">Abacavir <ins>5mg</ins> Dose</span>
        </div>
    </td>
</tr>
                </tbody>
            </table>
        </div>
    </div>
</div>
</div>
    </div>
</body>
</html>    "
`;

exports[`#file-diff-generator should create a diff for a new file with no corresponding old file (added / renamed / moved): ..\\output\\belatacept.html 1`] = `
"<html>
<head>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"https://cdn.jsdelivr.net/npm/diff2html/bundles/css/diff2html.min.css\\" /> 
    <script type=\\"text/javascript\\" src=\\"https://cdn.jsdelivr.net/npm/diff2html/bundles/js/diff2html.min.js\\"></script>
    <style>
        .d2h-files-diff {
            height: auto !important;
        }
    </style>
</head>
<body>
    <div id=\\"body\\">
    <div class=\\"d2h-file-list-wrapper\\">
    <div class=\\"d2h-file-list-header\\">
        <span class=\\"d2h-file-list-title\\">Files changed (1)</span>
        <a class=\\"d2h-file-switch d2h-hide\\">hide</a>
        <a class=\\"d2h-file-switch d2h-show\\">show</a>
    </div>
    <ol class=\\"d2h-file-list\\">
    <li class=\\"d2h-file-list-line\\">
    <span class=\\"d2h-file-name-wrapper\\">
      <svg aria-hidden=\\"true\\" class=\\"d2h-icon d2h-added\\" height=\\"16\\" title=\\"added\\" version=\\"1.1\\" viewBox=\\"0 0 14 16\\"
           width=\\"14\\">
          <path d=\\"M13 1H1C0.45 1 0 1.45 0 2v12c0 0.55 0.45 1 1 1h12c0.55 0 1-0.45 1-1V2c0-0.55-0.45-1-1-1z m0 13H1V2h12v12zM6 9H3V7h3V4h2v3h3v2H8v3H6V9z\\"></path>
      </svg>      <a href=\\"#d2h-718082\\" class=\\"d2h-file-name\\">test/new/belatacept.html</a>
      <span class=\\"d2h-file-stats\\">
          <span class=\\"d2h-lines-added\\">+1</span>
          <span class=\\"d2h-lines-deleted\\">-0</span>
      </span>
    </span>
</li>
    </ol>
</div><div class=\\"d2h-wrapper\\">
    <div id=\\"d2h-718082\\" class=\\"d2h-file-wrapper\\" data-lang=\\"html\\">
    <div class=\\"d2h-file-header\\">
    <span class=\\"d2h-file-name-wrapper\\">
    <svg aria-hidden=\\"true\\" class=\\"d2h-icon\\" height=\\"16\\" version=\\"1.1\\" viewBox=\\"0 0 12 16\\" width=\\"12\\">
        <path d=\\"M6 5H2v-1h4v1zM2 8h7v-1H2v1z m0 2h7v-1H2v1z m0 2h7v-1H2v1z m10-7.5v9.5c0 0.55-0.45 1-1 1H1c-0.55 0-1-0.45-1-1V2c0-0.55 0.45-1 1-1h7.5l3.5 3.5z m-1 0.5L8 2H1v12h10V5z\\"></path>
    </svg>    <span class=\\"d2h-file-name\\">test/new/belatacept.html</span>
    <span class=\\"d2h-tag d2h-added d2h-added-tag\\">ADDED</span></span>
    </div>
    <div class=\\"d2h-file-diff\\">
        <div class=\\"d2h-code-wrapper\\">
            <table class=\\"d2h-diff-table\\">
                <tbody class=\\"d2h-diff-tbody\\">
                <tr>
    <td class=\\"d2h-code-linenumber d2h-info\\"></td>
    <td class=\\"d2h-info\\">
        <div class=\\"d2h-code-line d2h-info\\">@@ -1,0 +1,1 @@</div>
    </td>
</tr><tr>
    <td class=\\"d2h-code-linenumber d2h-ins\\">
      <div class=\\"line-num1\\"></div>
<div class=\\"line-num2\\">1</div>
    </td>
    <td class=\\"d2h-ins\\">
        <div class=\\"d2h-code-line d2h-ins\\">
            <span class=\\"d2h-code-line-prefix\\">+</span>
            <span class=\\"d2h-code-line-ctn\\">Belatacept 5mg Dose</span>
        </div>
    </td>
</tr>
                </tbody>
            </table>
        </div>
    </div>
</div>
</div>
    </div>
</body>
</html>    "
`;

exports[`#file-diff-generator should create a diff for an old file with no corresponding new file (deleted / renamed / moved): ..\\output\\calcitriol.html 1`] = `
"<html>
<head>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"https://cdn.jsdelivr.net/npm/diff2html/bundles/css/diff2html.min.css\\" /> 
    <script type=\\"text/javascript\\" src=\\"https://cdn.jsdelivr.net/npm/diff2html/bundles/js/diff2html.min.js\\"></script>
    <style>
        .d2h-files-diff {
            height: auto !important;
        }
    </style>
</head>
<body>
    <div id=\\"body\\">
    <div class=\\"d2h-file-list-wrapper\\">
    <div class=\\"d2h-file-list-header\\">
        <span class=\\"d2h-file-list-title\\">Files changed (1)</span>
        <a class=\\"d2h-file-switch d2h-hide\\">hide</a>
        <a class=\\"d2h-file-switch d2h-show\\">show</a>
    </div>
    <ol class=\\"d2h-file-list\\">
    <li class=\\"d2h-file-list-line\\">
    <span class=\\"d2h-file-name-wrapper\\">
      <svg aria-hidden=\\"true\\" class=\\"d2h-icon d2h-deleted\\" height=\\"16\\" title=\\"removed\\" version=\\"1.1\\"
           viewBox=\\"0 0 14 16\\" width=\\"14\\">
          <path d=\\"M13 1H1C0.45 1 0 1.45 0 2v12c0 0.55 0.45 1 1 1h12c0.55 0 1-0.45 1-1V2c0-0.55-0.45-1-1-1z m0 13H1V2h12v12zM11 9H3V7h8v2z\\"></path>
      </svg>      <a href=\\"#d2h-141472\\" class=\\"d2h-file-name\\">test/old/calcitriol.html</a>
      <span class=\\"d2h-file-stats\\">
          <span class=\\"d2h-lines-added\\">+0</span>
          <span class=\\"d2h-lines-deleted\\">-1</span>
      </span>
    </span>
</li>
    </ol>
</div><div class=\\"d2h-wrapper\\">
    <div id=\\"d2h-141472\\" class=\\"d2h-file-wrapper\\" data-lang=\\"html\\">
    <div class=\\"d2h-file-header\\">
    <span class=\\"d2h-file-name-wrapper\\">
    <svg aria-hidden=\\"true\\" class=\\"d2h-icon\\" height=\\"16\\" version=\\"1.1\\" viewBox=\\"0 0 12 16\\" width=\\"12\\">
        <path d=\\"M6 5H2v-1h4v1zM2 8h7v-1H2v1z m0 2h7v-1H2v1z m0 2h7v-1H2v1z m10-7.5v9.5c0 0.55-0.45 1-1 1H1c-0.55 0-1-0.45-1-1V2c0-0.55 0.45-1 1-1h7.5l3.5 3.5z m-1 0.5L8 2H1v12h10V5z\\"></path>
    </svg>    <span class=\\"d2h-file-name\\">test/old/calcitriol.html</span>
    <span class=\\"d2h-tag d2h-deleted d2h-deleted-tag\\">DELETED</span></span>
    </div>
    <div class=\\"d2h-file-diff\\">
        <div class=\\"d2h-code-wrapper\\">
            <table class=\\"d2h-diff-table\\">
                <tbody class=\\"d2h-diff-tbody\\">
                <tr>
    <td class=\\"d2h-code-linenumber d2h-info\\"></td>
    <td class=\\"d2h-info\\">
        <div class=\\"d2h-code-line d2h-info\\">@@ -1,1 +1,0 @@</div>
    </td>
</tr><tr>
    <td class=\\"d2h-code-linenumber d2h-del\\">
      <div class=\\"line-num1\\">1</div>
<div class=\\"line-num2\\"></div>
    </td>
    <td class=\\"d2h-del\\">
        <div class=\\"d2h-code-line d2h-del\\">
            <span class=\\"d2h-code-line-prefix\\">-</span>
            <span class=\\"d2h-code-line-ctn\\">Calcitriol 10mg Dose</span>
        </div>
    </td>
</tr>
                </tbody>
            </table>
        </div>
    </div>
</div>
</div>
    </div>
</body>
</html>    "
`;

exports[`#file-diff-generator should create a diff for files in sub directories: ..\\output\\sub-folder\\paracetamol.html 1`] = `
"<html>
<head>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"https://cdn.jsdelivr.net/npm/diff2html/bundles/css/diff2html.min.css\\" /> 
    <script type=\\"text/javascript\\" src=\\"https://cdn.jsdelivr.net/npm/diff2html/bundles/js/diff2html.min.js\\"></script>
    <style>
        .d2h-files-diff {
            height: auto !important;
        }
    </style>
</head>
<body>
    <div id=\\"body\\">
    <div class=\\"d2h-file-list-wrapper\\">
    <div class=\\"d2h-file-list-header\\">
        <span class=\\"d2h-file-list-title\\">Files changed (1)</span>
        <a class=\\"d2h-file-switch d2h-hide\\">hide</a>
        <a class=\\"d2h-file-switch d2h-show\\">show</a>
    </div>
    <ol class=\\"d2h-file-list\\">
    <li class=\\"d2h-file-list-line\\">
    <span class=\\"d2h-file-name-wrapper\\">
      <svg aria-hidden=\\"true\\" class=\\"d2h-icon d2h-changed\\" height=\\"16\\" title=\\"modified\\" version=\\"1.1\\"
           viewBox=\\"0 0 14 16\\" width=\\"14\\">
          <path d=\\"M13 1H1C0.45 1 0 1.45 0 2v12c0 0.55 0.45 1 1 1h12c0.55 0 1-0.45 1-1V2c0-0.55-0.45-1-1-1z m0 13H1V2h12v12zM4 8c0-1.66 1.34-3 3-3s3 1.34 3 3-1.34 3-3 3-3-1.34-3-3z\\"></path>
      </svg>      <a href=\\"#d2h-152966\\" class=\\"d2h-file-name\\">test/new/sub-folder/paracetamol.html</a>
      <span class=\\"d2h-file-stats\\">
          <span class=\\"d2h-lines-added\\">+1</span>
          <span class=\\"d2h-lines-deleted\\">-1</span>
      </span>
    </span>
</li>
    </ol>
</div><div class=\\"d2h-wrapper\\">
    <div id=\\"d2h-152966\\" class=\\"d2h-file-wrapper\\" data-lang=\\"html\\">
    <div class=\\"d2h-file-header\\">
    <span class=\\"d2h-file-name-wrapper\\">
    <svg aria-hidden=\\"true\\" class=\\"d2h-icon\\" height=\\"16\\" version=\\"1.1\\" viewBox=\\"0 0 12 16\\" width=\\"12\\">
        <path d=\\"M6 5H2v-1h4v1zM2 8h7v-1H2v1z m0 2h7v-1H2v1z m0 2h7v-1H2v1z m10-7.5v9.5c0 0.55-0.45 1-1 1H1c-0.55 0-1-0.45-1-1V2c0-0.55 0.45-1 1-1h7.5l3.5 3.5z m-1 0.5L8 2H1v12h10V5z\\"></path>
    </svg>    <span class=\\"d2h-file-name\\">test/new/sub-folder/paracetamol.html</span>
    <span class=\\"d2h-tag d2h-changed d2h-changed-tag\\">CHANGED</span></span>
    </div>
    <div class=\\"d2h-file-diff\\">
        <div class=\\"d2h-code-wrapper\\">
            <table class=\\"d2h-diff-table\\">
                <tbody class=\\"d2h-diff-tbody\\">
                <tr>
    <td class=\\"d2h-code-linenumber d2h-info\\"></td>
    <td class=\\"d2h-info\\">
        <div class=\\"d2h-code-line d2h-info\\">@@ -1,1 +1,1 @@</div>
    </td>
</tr><tr>
    <td class=\\"d2h-code-linenumber d2h-del d2h-change\\">
      <div class=\\"line-num1\\">1</div>
<div class=\\"line-num2\\"></div>
    </td>
    <td class=\\"d2h-del d2h-change\\">
        <div class=\\"d2h-code-line d2h-del d2h-change\\">
            <span class=\\"d2h-code-line-prefix\\">-</span>
            <span class=\\"d2h-code-line-ctn\\">Paracetamol <del>5mg</del> Dose</span>
        </div>
    </td>
</tr><tr>
    <td class=\\"d2h-code-linenumber d2h-ins d2h-change\\">
      <div class=\\"line-num1\\"></div>
<div class=\\"line-num2\\">1</div>
    </td>
    <td class=\\"d2h-ins d2h-change\\">
        <div class=\\"d2h-code-line d2h-ins d2h-change\\">
            <span class=\\"d2h-code-line-prefix\\">+</span>
            <span class=\\"d2h-code-line-ctn\\">Paracetamol <ins>10mg</ins> Dose</span>
        </div>
    </td>
</tr>
                </tbody>
            </table>
        </div>
    </div>
</div>
</div>
    </div>
</body>
</html>    "
`;

exports[`#file-diff-generator should merge all file diffs into a single file: ..\\output\\allResults.html 1`] = `
"<html>
<head>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"https://cdn.jsdelivr.net/npm/diff2html/bundles/css/diff2html.min.css\\" /> 
    <script type=\\"text/javascript\\" src=\\"https://cdn.jsdelivr.net/npm/diff2html/bundles/js/diff2html.min.js\\"></script>
    <style>
        .d2h-files-diff {
            height: auto !important;
        }
    </style>
</head>
<body>
    <div id=\\"body\\">
    <div class=\\"d2h-file-list-wrapper\\">
    <div class=\\"d2h-file-list-header\\">
        <span class=\\"d2h-file-list-title\\">Files changed (1)</span>
        <a class=\\"d2h-file-switch d2h-hide\\">hide</a>
        <a class=\\"d2h-file-switch d2h-show\\">show</a>
    </div>
    <ol class=\\"d2h-file-list\\">
    <li class=\\"d2h-file-list-line\\">
    <span class=\\"d2h-file-name-wrapper\\">
      <svg aria-hidden=\\"true\\" class=\\"d2h-icon d2h-changed\\" height=\\"16\\" title=\\"modified\\" version=\\"1.1\\"
           viewBox=\\"0 0 14 16\\" width=\\"14\\">
          <path d=\\"M13 1H1C0.45 1 0 1.45 0 2v12c0 0.55 0.45 1 1 1h12c0.55 0 1-0.45 1-1V2c0-0.55-0.45-1-1-1z m0 13H1V2h12v12zM4 8c0-1.66 1.34-3 3-3s3 1.34 3 3-1.34 3-3 3-3-1.34-3-3z\\"></path>
      </svg>      <a href=\\"#d2h-547348\\" class=\\"d2h-file-name\\">test/new/abacavir.html</a>
      <span class=\\"d2h-file-stats\\">
          <span class=\\"d2h-lines-added\\">+1</span>
          <span class=\\"d2h-lines-deleted\\">-1</span>
      </span>
    </span>
</li>
    </ol>
</div><div class=\\"d2h-wrapper\\">
    <div id=\\"d2h-547348\\" class=\\"d2h-file-wrapper\\" data-lang=\\"html\\">
    <div class=\\"d2h-file-header\\">
    <span class=\\"d2h-file-name-wrapper\\">
    <svg aria-hidden=\\"true\\" class=\\"d2h-icon\\" height=\\"16\\" version=\\"1.1\\" viewBox=\\"0 0 12 16\\" width=\\"12\\">
        <path d=\\"M6 5H2v-1h4v1zM2 8h7v-1H2v1z m0 2h7v-1H2v1z m0 2h7v-1H2v1z m10-7.5v9.5c0 0.55-0.45 1-1 1H1c-0.55 0-1-0.45-1-1V2c0-0.55 0.45-1 1-1h7.5l3.5 3.5z m-1 0.5L8 2H1v12h10V5z\\"></path>
    </svg>    <span class=\\"d2h-file-name\\">test/new/abacavir.html</span>
    <span class=\\"d2h-tag d2h-changed d2h-changed-tag\\">CHANGED</span></span>
    </div>
    <div class=\\"d2h-file-diff\\">
        <div class=\\"d2h-code-wrapper\\">
            <table class=\\"d2h-diff-table\\">
                <tbody class=\\"d2h-diff-tbody\\">
                <tr>
    <td class=\\"d2h-code-linenumber d2h-info\\"></td>
    <td class=\\"d2h-info\\">
        <div class=\\"d2h-code-line d2h-info\\">@@ -1,1 +1,1 @@</div>
    </td>
</tr><tr>
    <td class=\\"d2h-code-linenumber d2h-del d2h-change\\">
      <div class=\\"line-num1\\">1</div>
<div class=\\"line-num2\\"></div>
    </td>
    <td class=\\"d2h-del d2h-change\\">
        <div class=\\"d2h-code-line d2h-del d2h-change\\">
            <span class=\\"d2h-code-line-prefix\\">-</span>
            <span class=\\"d2h-code-line-ctn\\">Abacavir <del>10mg</del> Dose</span>
        </div>
    </td>
</tr><tr>
    <td class=\\"d2h-code-linenumber d2h-ins d2h-change\\">
      <div class=\\"line-num1\\"></div>
<div class=\\"line-num2\\">1</div>
    </td>
    <td class=\\"d2h-ins d2h-change\\">
        <div class=\\"d2h-code-line d2h-ins d2h-change\\">
            <span class=\\"d2h-code-line-prefix\\">+</span>
            <span class=\\"d2h-code-line-ctn\\">Abacavir <ins>5mg</ins> Dose</span>
        </div>
    </td>
</tr>
                </tbody>
            </table>
        </div>
    </div>
</div>
</div>
    </div>
</body>
</html>    <html>
<head>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"https://cdn.jsdelivr.net/npm/diff2html/bundles/css/diff2html.min.css\\" /> 
    <script type=\\"text/javascript\\" src=\\"https://cdn.jsdelivr.net/npm/diff2html/bundles/js/diff2html.min.js\\"></script>
    <style>
        .d2h-files-diff {
            height: auto !important;
        }
    </style>
</head>
<body>
    <div id=\\"body\\">
    <div class=\\"d2h-file-list-wrapper\\">
    <div class=\\"d2h-file-list-header\\">
        <span class=\\"d2h-file-list-title\\">Files changed (1)</span>
        <a class=\\"d2h-file-switch d2h-hide\\">hide</a>
        <a class=\\"d2h-file-switch d2h-show\\">show</a>
    </div>
    <ol class=\\"d2h-file-list\\">
    <li class=\\"d2h-file-list-line\\">
    <span class=\\"d2h-file-name-wrapper\\">
      <svg aria-hidden=\\"true\\" class=\\"d2h-icon d2h-added\\" height=\\"16\\" title=\\"added\\" version=\\"1.1\\" viewBox=\\"0 0 14 16\\"
           width=\\"14\\">
          <path d=\\"M13 1H1C0.45 1 0 1.45 0 2v12c0 0.55 0.45 1 1 1h12c0.55 0 1-0.45 1-1V2c0-0.55-0.45-1-1-1z m0 13H1V2h12v12zM6 9H3V7h3V4h2v3h3v2H8v3H6V9z\\"></path>
      </svg>      <a href=\\"#d2h-718082\\" class=\\"d2h-file-name\\">test/new/belatacept.html</a>
      <span class=\\"d2h-file-stats\\">
          <span class=\\"d2h-lines-added\\">+1</span>
          <span class=\\"d2h-lines-deleted\\">-0</span>
      </span>
    </span>
</li>
    </ol>
</div><div class=\\"d2h-wrapper\\">
    <div id=\\"d2h-718082\\" class=\\"d2h-file-wrapper\\" data-lang=\\"html\\">
    <div class=\\"d2h-file-header\\">
    <span class=\\"d2h-file-name-wrapper\\">
    <svg aria-hidden=\\"true\\" class=\\"d2h-icon\\" height=\\"16\\" version=\\"1.1\\" viewBox=\\"0 0 12 16\\" width=\\"12\\">
        <path d=\\"M6 5H2v-1h4v1zM2 8h7v-1H2v1z m0 2h7v-1H2v1z m0 2h7v-1H2v1z m10-7.5v9.5c0 0.55-0.45 1-1 1H1c-0.55 0-1-0.45-1-1V2c0-0.55 0.45-1 1-1h7.5l3.5 3.5z m-1 0.5L8 2H1v12h10V5z\\"></path>
    </svg>    <span class=\\"d2h-file-name\\">test/new/belatacept.html</span>
    <span class=\\"d2h-tag d2h-added d2h-added-tag\\">ADDED</span></span>
    </div>
    <div class=\\"d2h-file-diff\\">
        <div class=\\"d2h-code-wrapper\\">
            <table class=\\"d2h-diff-table\\">
                <tbody class=\\"d2h-diff-tbody\\">
                <tr>
    <td class=\\"d2h-code-linenumber d2h-info\\"></td>
    <td class=\\"d2h-info\\">
        <div class=\\"d2h-code-line d2h-info\\">@@ -1,0 +1,1 @@</div>
    </td>
</tr><tr>
    <td class=\\"d2h-code-linenumber d2h-ins\\">
      <div class=\\"line-num1\\"></div>
<div class=\\"line-num2\\">1</div>
    </td>
    <td class=\\"d2h-ins\\">
        <div class=\\"d2h-code-line d2h-ins\\">
            <span class=\\"d2h-code-line-prefix\\">+</span>
            <span class=\\"d2h-code-line-ctn\\">Belatacept 5mg Dose</span>
        </div>
    </td>
</tr>
                </tbody>
            </table>
        </div>
    </div>
</div>
</div>
    </div>
</body>
</html>    <html>
<head>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"https://cdn.jsdelivr.net/npm/diff2html/bundles/css/diff2html.min.css\\" /> 
    <script type=\\"text/javascript\\" src=\\"https://cdn.jsdelivr.net/npm/diff2html/bundles/js/diff2html.min.js\\"></script>
    <style>
        .d2h-files-diff {
            height: auto !important;
        }
    </style>
</head>
<body>
    <div id=\\"body\\">
    <div class=\\"d2h-file-list-wrapper\\">
    <div class=\\"d2h-file-list-header\\">
        <span class=\\"d2h-file-list-title\\">Files changed (1)</span>
        <a class=\\"d2h-file-switch d2h-hide\\">hide</a>
        <a class=\\"d2h-file-switch d2h-show\\">show</a>
    </div>
    <ol class=\\"d2h-file-list\\">
    <li class=\\"d2h-file-list-line\\">
    <span class=\\"d2h-file-name-wrapper\\">
      <svg aria-hidden=\\"true\\" class=\\"d2h-icon d2h-changed\\" height=\\"16\\" title=\\"modified\\" version=\\"1.1\\"
           viewBox=\\"0 0 14 16\\" width=\\"14\\">
          <path d=\\"M13 1H1C0.45 1 0 1.45 0 2v12c0 0.55 0.45 1 1 1h12c0.55 0 1-0.45 1-1V2c0-0.55-0.45-1-1-1z m0 13H1V2h12v12zM4 8c0-1.66 1.34-3 3-3s3 1.34 3 3-1.34 3-3 3-3-1.34-3-3z\\"></path>
      </svg>      <a href=\\"#d2h-305335\\" class=\\"d2h-file-name\\">test/new/bnf.js</a>
      <span class=\\"d2h-file-stats\\">
          <span class=\\"d2h-lines-added\\">+1</span>
          <span class=\\"d2h-lines-deleted\\">-1</span>
      </span>
    </span>
</li>
    </ol>
</div><div class=\\"d2h-wrapper\\">
    <div id=\\"d2h-305335\\" class=\\"d2h-file-wrapper\\" data-lang=\\"js\\">
    <div class=\\"d2h-file-header\\">
    <span class=\\"d2h-file-name-wrapper\\">
    <svg aria-hidden=\\"true\\" class=\\"d2h-icon\\" height=\\"16\\" version=\\"1.1\\" viewBox=\\"0 0 12 16\\" width=\\"12\\">
        <path d=\\"M6 5H2v-1h4v1zM2 8h7v-1H2v1z m0 2h7v-1H2v1z m0 2h7v-1H2v1z m10-7.5v9.5c0 0.55-0.45 1-1 1H1c-0.55 0-1-0.45-1-1V2c0-0.55 0.45-1 1-1h7.5l3.5 3.5z m-1 0.5L8 2H1v12h10V5z\\"></path>
    </svg>    <span class=\\"d2h-file-name\\">test/new/bnf.js</span>
    <span class=\\"d2h-tag d2h-changed d2h-changed-tag\\">CHANGED</span></span>
    </div>
    <div class=\\"d2h-file-diff\\">
        <div class=\\"d2h-code-wrapper\\">
            <table class=\\"d2h-diff-table\\">
                <tbody class=\\"d2h-diff-tbody\\">
                <tr>
    <td class=\\"d2h-code-linenumber d2h-info\\"></td>
    <td class=\\"d2h-info\\">
        <div class=\\"d2h-code-line d2h-info\\">@@ -1,1 +1,1 @@</div>
    </td>
</tr><tr>
    <td class=\\"d2h-code-linenumber d2h-del d2h-change\\">
      <div class=\\"line-num1\\">1</div>
<div class=\\"line-num2\\"></div>
    </td>
    <td class=\\"d2h-del d2h-change\\">
        <div class=\\"d2h-code-line d2h-del d2h-change\\">
            <span class=\\"d2h-code-line-prefix\\">-</span>
            <span class=\\"d2h-code-line-ctn\\">console.log(&quot;<del>good bye</del>&quot;);</span>
        </div>
    </td>
</tr><tr>
    <td class=\\"d2h-code-linenumber d2h-ins d2h-change\\">
      <div class=\\"line-num1\\"></div>
<div class=\\"line-num2\\">1</div>
    </td>
    <td class=\\"d2h-ins d2h-change\\">
        <div class=\\"d2h-code-line d2h-ins d2h-change\\">
            <span class=\\"d2h-code-line-prefix\\">+</span>
            <span class=\\"d2h-code-line-ctn\\">console.log(&quot;<ins>hello</ins>&quot;);</span>
        </div>
    </td>
</tr>
                </tbody>
            </table>
        </div>
    </div>
</div>
</div>
    </div>
</body>
</html>    <html>
<head>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"https://cdn.jsdelivr.net/npm/diff2html/bundles/css/diff2html.min.css\\" /> 
    <script type=\\"text/javascript\\" src=\\"https://cdn.jsdelivr.net/npm/diff2html/bundles/js/diff2html.min.js\\"></script>
    <style>
        .d2h-files-diff {
            height: auto !important;
        }
    </style>
</head>
<body>
    <div id=\\"body\\">
    <div class=\\"d2h-file-list-wrapper\\">
    <div class=\\"d2h-file-list-header\\">
        <span class=\\"d2h-file-list-title\\">Files changed (1)</span>
        <a class=\\"d2h-file-switch d2h-hide\\">hide</a>
        <a class=\\"d2h-file-switch d2h-show\\">show</a>
    </div>
    <ol class=\\"d2h-file-list\\">
    <li class=\\"d2h-file-list-line\\">
    <span class=\\"d2h-file-name-wrapper\\">
      <svg aria-hidden=\\"true\\" class=\\"d2h-icon d2h-deleted\\" height=\\"16\\" title=\\"removed\\" version=\\"1.1\\"
           viewBox=\\"0 0 14 16\\" width=\\"14\\">
          <path d=\\"M13 1H1C0.45 1 0 1.45 0 2v12c0 0.55 0.45 1 1 1h12c0.55 0 1-0.45 1-1V2c0-0.55-0.45-1-1-1z m0 13H1V2h12v12zM11 9H3V7h8v2z\\"></path>
      </svg>      <a href=\\"#d2h-141472\\" class=\\"d2h-file-name\\">test/old/calcitriol.html</a>
      <span class=\\"d2h-file-stats\\">
          <span class=\\"d2h-lines-added\\">+0</span>
          <span class=\\"d2h-lines-deleted\\">-1</span>
      </span>
    </span>
</li>
    </ol>
</div><div class=\\"d2h-wrapper\\">
    <div id=\\"d2h-141472\\" class=\\"d2h-file-wrapper\\" data-lang=\\"html\\">
    <div class=\\"d2h-file-header\\">
    <span class=\\"d2h-file-name-wrapper\\">
    <svg aria-hidden=\\"true\\" class=\\"d2h-icon\\" height=\\"16\\" version=\\"1.1\\" viewBox=\\"0 0 12 16\\" width=\\"12\\">
        <path d=\\"M6 5H2v-1h4v1zM2 8h7v-1H2v1z m0 2h7v-1H2v1z m0 2h7v-1H2v1z m10-7.5v9.5c0 0.55-0.45 1-1 1H1c-0.55 0-1-0.45-1-1V2c0-0.55 0.45-1 1-1h7.5l3.5 3.5z m-1 0.5L8 2H1v12h10V5z\\"></path>
    </svg>    <span class=\\"d2h-file-name\\">test/old/calcitriol.html</span>
    <span class=\\"d2h-tag d2h-deleted d2h-deleted-tag\\">DELETED</span></span>
    </div>
    <div class=\\"d2h-file-diff\\">
        <div class=\\"d2h-code-wrapper\\">
            <table class=\\"d2h-diff-table\\">
                <tbody class=\\"d2h-diff-tbody\\">
                <tr>
    <td class=\\"d2h-code-linenumber d2h-info\\"></td>
    <td class=\\"d2h-info\\">
        <div class=\\"d2h-code-line d2h-info\\">@@ -1,1 +1,0 @@</div>
    </td>
</tr><tr>
    <td class=\\"d2h-code-linenumber d2h-del\\">
      <div class=\\"line-num1\\">1</div>
<div class=\\"line-num2\\"></div>
    </td>
    <td class=\\"d2h-del\\">
        <div class=\\"d2h-code-line d2h-del\\">
            <span class=\\"d2h-code-line-prefix\\">-</span>
            <span class=\\"d2h-code-line-ctn\\">Calcitriol 10mg Dose</span>
        </div>
    </td>
</tr>
                </tbody>
            </table>
        </div>
    </div>
</div>
</div>
    </div>
</body>
</html>    <html>
<head>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"https://cdn.jsdelivr.net/npm/diff2html/bundles/css/diff2html.min.css\\" /> 
    <script type=\\"text/javascript\\" src=\\"https://cdn.jsdelivr.net/npm/diff2html/bundles/js/diff2html.min.js\\"></script>
    <style>
        .d2h-files-diff {
            height: auto !important;
        }
    </style>
</head>
<body>
    <div id=\\"body\\">
    <div class=\\"d2h-file-list-wrapper\\">
    <div class=\\"d2h-file-list-header\\">
        <span class=\\"d2h-file-list-title\\">Files changed (1)</span>
        <a class=\\"d2h-file-switch d2h-hide\\">hide</a>
        <a class=\\"d2h-file-switch d2h-show\\">show</a>
    </div>
    <ol class=\\"d2h-file-list\\">
    <li class=\\"d2h-file-list-line\\">
    <span class=\\"d2h-file-name-wrapper\\">
      <svg aria-hidden=\\"true\\" class=\\"d2h-icon d2h-changed\\" height=\\"16\\" title=\\"modified\\" version=\\"1.1\\"
           viewBox=\\"0 0 14 16\\" width=\\"14\\">
          <path d=\\"M13 1H1C0.45 1 0 1.45 0 2v12c0 0.55 0.45 1 1 1h12c0.55 0 1-0.45 1-1V2c0-0.55-0.45-1-1-1z m0 13H1V2h12v12zM4 8c0-1.66 1.34-3 3-3s3 1.34 3 3-1.34 3-3 3-3-1.34-3-3z\\"></path>
      </svg>      <a href=\\"#d2h-047089\\" class=\\"d2h-file-name\\">test/new/selenium.html</a>
      <span class=\\"d2h-file-stats\\">
          <span class=\\"d2h-lines-added\\">+1</span>
          <span class=\\"d2h-lines-deleted\\">-1</span>
      </span>
    </span>
</li>
    </ol>
</div><div class=\\"d2h-wrapper\\">
    <div id=\\"d2h-047089\\" class=\\"d2h-file-wrapper\\" data-lang=\\"html\\">
    <div class=\\"d2h-file-header\\">
    <span class=\\"d2h-file-name-wrapper\\">
    <svg aria-hidden=\\"true\\" class=\\"d2h-icon\\" height=\\"16\\" version=\\"1.1\\" viewBox=\\"0 0 12 16\\" width=\\"12\\">
        <path d=\\"M6 5H2v-1h4v1zM2 8h7v-1H2v1z m0 2h7v-1H2v1z m0 2h7v-1H2v1z m10-7.5v9.5c0 0.55-0.45 1-1 1H1c-0.55 0-1-0.45-1-1V2c0-0.55 0.45-1 1-1h7.5l3.5 3.5z m-1 0.5L8 2H1v12h10V5z\\"></path>
    </svg>    <span class=\\"d2h-file-name\\">test/new/selenium.html</span>
    <span class=\\"d2h-tag d2h-changed d2h-changed-tag\\">CHANGED</span></span>
    </div>
    <div class=\\"d2h-file-diff\\">
        <div class=\\"d2h-code-wrapper\\">
            <table class=\\"d2h-diff-table\\">
                <tbody class=\\"d2h-diff-tbody\\">
                <tr>
    <td class=\\"d2h-code-linenumber d2h-info\\"></td>
    <td class=\\"d2h-info\\">
        <div class=\\"d2h-code-line d2h-info\\">@@ -1,3 +1,3 @@</div>
    </td>
</tr><tr>
    <td class=\\"d2h-code-linenumber d2h-cntx\\">
      <div class=\\"line-num1\\">1</div>
<div class=\\"line-num2\\">1</div>
    </td>
    <td class=\\"d2h-cntx\\">
        <div class=\\"d2h-code-line d2h-cntx\\">
            <span class=\\"d2h-code-line-prefix\\">&nbsp;</span>
            <span class=\\"d2h-code-line-ctn\\">&lt;body id=&quot;aToZ&quot; class=&quot;aToZ&quot; data-publication=&quot;bnf&quot; data-buildnumber=&quot;&quot; data-release=&quot;live&quot;&gt;</span>
        </div>
    </td>
</tr><tr>
    <td class=\\"d2h-code-linenumber d2h-del d2h-change\\">
      <div class=\\"line-num1\\">2</div>
<div class=\\"line-num2\\"></div>
    </td>
    <td class=\\"d2h-del d2h-change\\">
        <div class=\\"d2h-code-line d2h-del d2h-change\\">
            <span class=\\"d2h-code-line-prefix\\">-</span>
            <span class=\\"d2h-code-line-ctn\\">&lt;p&gt;selenium <del>15mg</del>&lt;&#x2F;p&gt;</span>
        </div>
    </td>
</tr><tr>
    <td class=\\"d2h-code-linenumber d2h-ins d2h-change\\">
      <div class=\\"line-num1\\"></div>
<div class=\\"line-num2\\">2</div>
    </td>
    <td class=\\"d2h-ins d2h-change\\">
        <div class=\\"d2h-code-line d2h-ins d2h-change\\">
            <span class=\\"d2h-code-line-prefix\\">+</span>
            <span class=\\"d2h-code-line-ctn\\">&lt;p&gt;selenium <ins>10mg</ins>&lt;&#x2F;p&gt;</span>
        </div>
    </td>
</tr><tr>
    <td class=\\"d2h-code-linenumber d2h-cntx\\">
      <div class=\\"line-num1\\">3</div>
<div class=\\"line-num2\\">3</div>
    </td>
    <td class=\\"d2h-cntx\\">
        <div class=\\"d2h-code-line d2h-cntx\\">
            <span class=\\"d2h-code-line-prefix\\">&nbsp;</span>
            <span class=\\"d2h-code-line-ctn\\">&lt;&#x2F;body&gt;</span>
        </div>
    </td>
</tr>
                </tbody>
            </table>
        </div>
    </div>
</div>
</div>
    </div>
</body>
</html>    <html>
<head>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"https://cdn.jsdelivr.net/npm/diff2html/bundles/css/diff2html.min.css\\" /> 
    <script type=\\"text/javascript\\" src=\\"https://cdn.jsdelivr.net/npm/diff2html/bundles/js/diff2html.min.js\\"></script>
    <style>
        .d2h-files-diff {
            height: auto !important;
        }
    </style>
</head>
<body>
    <div id=\\"body\\">
    <div class=\\"d2h-file-list-wrapper\\">
    <div class=\\"d2h-file-list-header\\">
        <span class=\\"d2h-file-list-title\\">Files changed (1)</span>
        <a class=\\"d2h-file-switch d2h-hide\\">hide</a>
        <a class=\\"d2h-file-switch d2h-show\\">show</a>
    </div>
    <ol class=\\"d2h-file-list\\">
    <li class=\\"d2h-file-list-line\\">
    <span class=\\"d2h-file-name-wrapper\\">
      <svg aria-hidden=\\"true\\" class=\\"d2h-icon d2h-changed\\" height=\\"16\\" title=\\"modified\\" version=\\"1.1\\"
           viewBox=\\"0 0 14 16\\" width=\\"14\\">
          <path d=\\"M13 1H1C0.45 1 0 1.45 0 2v12c0 0.55 0.45 1 1 1h12c0.55 0 1-0.45 1-1V2c0-0.55-0.45-1-1-1z m0 13H1V2h12v12zM4 8c0-1.66 1.34-3 3-3s3 1.34 3 3-1.34 3-3 3-3-1.34-3-3z\\"></path>
      </svg>      <a href=\\"#d2h-152966\\" class=\\"d2h-file-name\\">test/new/sub-folder/paracetamol.html</a>
      <span class=\\"d2h-file-stats\\">
          <span class=\\"d2h-lines-added\\">+1</span>
          <span class=\\"d2h-lines-deleted\\">-1</span>
      </span>
    </span>
</li>
    </ol>
</div><div class=\\"d2h-wrapper\\">
    <div id=\\"d2h-152966\\" class=\\"d2h-file-wrapper\\" data-lang=\\"html\\">
    <div class=\\"d2h-file-header\\">
    <span class=\\"d2h-file-name-wrapper\\">
    <svg aria-hidden=\\"true\\" class=\\"d2h-icon\\" height=\\"16\\" version=\\"1.1\\" viewBox=\\"0 0 12 16\\" width=\\"12\\">
        <path d=\\"M6 5H2v-1h4v1zM2 8h7v-1H2v1z m0 2h7v-1H2v1z m0 2h7v-1H2v1z m10-7.5v9.5c0 0.55-0.45 1-1 1H1c-0.55 0-1-0.45-1-1V2c0-0.55 0.45-1 1-1h7.5l3.5 3.5z m-1 0.5L8 2H1v12h10V5z\\"></path>
    </svg>    <span class=\\"d2h-file-name\\">test/new/sub-folder/paracetamol.html</span>
    <span class=\\"d2h-tag d2h-changed d2h-changed-tag\\">CHANGED</span></span>
    </div>
    <div class=\\"d2h-file-diff\\">
        <div class=\\"d2h-code-wrapper\\">
            <table class=\\"d2h-diff-table\\">
                <tbody class=\\"d2h-diff-tbody\\">
                <tr>
    <td class=\\"d2h-code-linenumber d2h-info\\"></td>
    <td class=\\"d2h-info\\">
        <div class=\\"d2h-code-line d2h-info\\">@@ -1,1 +1,1 @@</div>
    </td>
</tr><tr>
    <td class=\\"d2h-code-linenumber d2h-del d2h-change\\">
      <div class=\\"line-num1\\">1</div>
<div class=\\"line-num2\\"></div>
    </td>
    <td class=\\"d2h-del d2h-change\\">
        <div class=\\"d2h-code-line d2h-del d2h-change\\">
            <span class=\\"d2h-code-line-prefix\\">-</span>
            <span class=\\"d2h-code-line-ctn\\">Paracetamol <del>5mg</del> Dose</span>
        </div>
    </td>
</tr><tr>
    <td class=\\"d2h-code-linenumber d2h-ins d2h-change\\">
      <div class=\\"line-num1\\"></div>
<div class=\\"line-num2\\">1</div>
    </td>
    <td class=\\"d2h-ins d2h-change\\">
        <div class=\\"d2h-code-line d2h-ins d2h-change\\">
            <span class=\\"d2h-code-line-prefix\\">+</span>
            <span class=\\"d2h-code-line-ctn\\">Paracetamol <ins>10mg</ins> Dose</span>
        </div>
    </td>
</tr>
                </tbody>
            </table>
        </div>
    </div>
</div>
</div>
    </div>
</body>
</html>    "
`;

exports[`#file-diff-generator should replace strings in files using regex parameter: ..\\output\\selenium.html 1`] = `
"<html>
<head>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"https://cdn.jsdelivr.net/npm/diff2html/bundles/css/diff2html.min.css\\" /> 
    <script type=\\"text/javascript\\" src=\\"https://cdn.jsdelivr.net/npm/diff2html/bundles/js/diff2html.min.js\\"></script>
    <style>
        .d2h-files-diff {
            height: auto !important;
        }
    </style>
</head>
<body>
    <div id=\\"body\\">
    <div class=\\"d2h-file-list-wrapper\\">
    <div class=\\"d2h-file-list-header\\">
        <span class=\\"d2h-file-list-title\\">Files changed (1)</span>
        <a class=\\"d2h-file-switch d2h-hide\\">hide</a>
        <a class=\\"d2h-file-switch d2h-show\\">show</a>
    </div>
    <ol class=\\"d2h-file-list\\">
    <li class=\\"d2h-file-list-line\\">
    <span class=\\"d2h-file-name-wrapper\\">
      <svg aria-hidden=\\"true\\" class=\\"d2h-icon d2h-changed\\" height=\\"16\\" title=\\"modified\\" version=\\"1.1\\"
           viewBox=\\"0 0 14 16\\" width=\\"14\\">
          <path d=\\"M13 1H1C0.45 1 0 1.45 0 2v12c0 0.55 0.45 1 1 1h12c0.55 0 1-0.45 1-1V2c0-0.55-0.45-1-1-1z m0 13H1V2h12v12zM4 8c0-1.66 1.34-3 3-3s3 1.34 3 3-1.34 3-3 3-3-1.34-3-3z\\"></path>
      </svg>      <a href=\\"#d2h-047089\\" class=\\"d2h-file-name\\">test/new/selenium.html</a>
      <span class=\\"d2h-file-stats\\">
          <span class=\\"d2h-lines-added\\">+1</span>
          <span class=\\"d2h-lines-deleted\\">-1</span>
      </span>
    </span>
</li>
    </ol>
</div><div class=\\"d2h-wrapper\\">
    <div id=\\"d2h-047089\\" class=\\"d2h-file-wrapper\\" data-lang=\\"html\\">
    <div class=\\"d2h-file-header\\">
    <span class=\\"d2h-file-name-wrapper\\">
    <svg aria-hidden=\\"true\\" class=\\"d2h-icon\\" height=\\"16\\" version=\\"1.1\\" viewBox=\\"0 0 12 16\\" width=\\"12\\">
        <path d=\\"M6 5H2v-1h4v1zM2 8h7v-1H2v1z m0 2h7v-1H2v1z m0 2h7v-1H2v1z m10-7.5v9.5c0 0.55-0.45 1-1 1H1c-0.55 0-1-0.45-1-1V2c0-0.55 0.45-1 1-1h7.5l3.5 3.5z m-1 0.5L8 2H1v12h10V5z\\"></path>
    </svg>    <span class=\\"d2h-file-name\\">test/new/selenium.html</span>
    <span class=\\"d2h-tag d2h-changed d2h-changed-tag\\">CHANGED</span></span>
    </div>
    <div class=\\"d2h-file-diff\\">
        <div class=\\"d2h-code-wrapper\\">
            <table class=\\"d2h-diff-table\\">
                <tbody class=\\"d2h-diff-tbody\\">
                <tr>
    <td class=\\"d2h-code-linenumber d2h-info\\"></td>
    <td class=\\"d2h-info\\">
        <div class=\\"d2h-code-line d2h-info\\">@@ -1,3 +1,3 @@</div>
    </td>
</tr><tr>
    <td class=\\"d2h-code-linenumber d2h-cntx\\">
      <div class=\\"line-num1\\">1</div>
<div class=\\"line-num2\\">1</div>
    </td>
    <td class=\\"d2h-cntx\\">
        <div class=\\"d2h-code-line d2h-cntx\\">
            <span class=\\"d2h-code-line-prefix\\">&nbsp;</span>
            <span class=\\"d2h-code-line-ctn\\">&lt;body id=&quot;aToZ&quot; class=&quot;aToZ&quot; data-publication=&quot;bnf&quot; data-buildnumber=&quot;&quot; data-release=&quot;live&quot;&gt;</span>
        </div>
    </td>
</tr><tr>
    <td class=\\"d2h-code-linenumber d2h-del d2h-change\\">
      <div class=\\"line-num1\\">2</div>
<div class=\\"line-num2\\"></div>
    </td>
    <td class=\\"d2h-del d2h-change\\">
        <div class=\\"d2h-code-line d2h-del d2h-change\\">
            <span class=\\"d2h-code-line-prefix\\">-</span>
            <span class=\\"d2h-code-line-ctn\\">&lt;p&gt;selenium <del>15mg</del>&lt;&#x2F;p&gt;</span>
        </div>
    </td>
</tr><tr>
    <td class=\\"d2h-code-linenumber d2h-ins d2h-change\\">
      <div class=\\"line-num1\\"></div>
<div class=\\"line-num2\\">2</div>
    </td>
    <td class=\\"d2h-ins d2h-change\\">
        <div class=\\"d2h-code-line d2h-ins d2h-change\\">
            <span class=\\"d2h-code-line-prefix\\">+</span>
            <span class=\\"d2h-code-line-ctn\\">&lt;p&gt;selenium <ins>10mg</ins>&lt;&#x2F;p&gt;</span>
        </div>
    </td>
</tr><tr>
    <td class=\\"d2h-code-linenumber d2h-cntx\\">
      <div class=\\"line-num1\\">3</div>
<div class=\\"line-num2\\">3</div>
    </td>
    <td class=\\"d2h-cntx\\">
        <div class=\\"d2h-code-line d2h-cntx\\">
            <span class=\\"d2h-code-line-prefix\\">&nbsp;</span>
            <span class=\\"d2h-code-line-ctn\\">&lt;&#x2F;body&gt;</span>
        </div>
    </td>
</tr>
                </tbody>
            </table>
        </div>
    </div>
</div>
</div>
    </div>
</body>
</html>    "
`;
